--- a/index.html
+++ b/index.html
@@ -19,21 +19,18 @@
       <h1>Introduction: Hi, everybody, hi 
       Doctor Nick</h1>
       <p>Details here: I have no idea what this is for</p>
-      <h1>Where I'm From: Born in the nation/s capital</h1>
-      <p>Details here...</p>
-      <h1>What are your favorite hobbies? - 
-      paying affordable rent</h1>
-      <p>Details here...</p>
-      <h1>What's your dream job? - to become one of the 
-      top software engineers in the world and become a 
-      Billionaire </h1>
-      <p>Details here...</p>
-      <h1>Where do you live? - That's a good question,
-      no where</h1>
-      <p>Details here...</p>
-      <h1>Why do you want to be a web developer? - Because
-      you don't want to get a programmer mad</h1>
-      <p>Details here...</p>
+      <h1>Where I'm From? </h1>
+      <p>Details here: Born in the nation/s capital...</p>
+      <h1>What are your favorite hobbies? </h1>
+      <p>Details here: Paying affordable rent...</p>
+      <h1>What's your dream job? </h1>
+      <p>Details here to become one of the 
+      top software engineers in the world and become a..</p>
+      <h1>Where do you live? </h1>   
+      <p>Details here: That's a good question...</p>
+      <h1>Why do you want to be a web developer? </h1>
+      <p>Details here: Because you don't want to get a 
+      programmer mad...</p>
     </section>
 
     <footer id="footer">
